reworked settings and modal-profile | username change fixes, added feature to copy users name (which is helpful in cases where data is too long), friend adding fixes, style and font fixes

--- a/WBSchool-chat/src/app/modal-profile/modal-profile.component.scss
+++ b/WBSchool-chat/src/app/modal-profile/modal-profile.component.scss
@@ -30,6 +30,7 @@
 	}
 
 	.profile__title {
+		font-family: "Raleway", sans-serif;
 		padding: 26px 0 0 39px;
 		font-style: normal;
 		font-weight: 600;
@@ -64,6 +65,7 @@
 			transition: 0.5s;
 
 			.profile__user-info_name_username {
+				font-family: "Raleway", sans-serif;
 				font-style: normal;
 				font-weight: 600;
 				font-size: 25px;
@@ -175,6 +177,7 @@
 			cursor: pointer;
 
 			.profile__menu_item_name {
+				font-family: "Raleway", sans-serif;
 				display: flex;
 				flex-direction: row;
 			}
@@ -241,10 +244,6 @@
 	@media (max-width: 350px) {
 		width: 250px;
 	}
-
-	// .displayZeroClass {
-	// 	display: none!important;
-	// }
 }
 
 .full_img {
